--- a/src/main/java/logic/gui/main/map.fxml
+++ b/src/main/java/logic/gui/main/map.fxml
@@ -9,7 +9,6 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-
 <AnchorPane prefHeight="511.0" prefWidth="709.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <GridPane gridLinesVisible="true" prefHeight="511.0" prefWidth="437.0">
@@ -112,5 +111,6 @@
       </VBox>
       <Button layoutX="535.0" layoutY="14.0" mnemonicParsing="false" text="Przerwij" />
       <Button layoutX="455.0" layoutY="198.0" mnemonicParsing="false" text="Zacznij śledzić" />
+      <Button layoutX="454.0" layoutY="231.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="162.0" text="Najpopularniejszy genotyp" />
    </children>
 </AnchorPane>
