--- a/src/main/java/logic/gui/main/map.fxml
+++ b/src/main/java/logic/gui/main/map.fxml
@@ -3,27 +3,17 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="511.0" prefWidth="709.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="696.0" prefWidth="1041.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="logic.gui.main.MapControls">
    <children>
-      <GridPane gridLinesVisible="true" prefHeight="511.0" prefWidth="437.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
+      <GridPane fx:id="grid" gridLinesVisible="true" prefHeight="700.0" prefWidth="700.0">
+
       </GridPane>
-      <Button layoutX="455.0" layoutY="14.0" mnemonicParsing="false" text="Wstrzymaj" />
-      <VBox layoutX="455.0" layoutY="291.0" prefHeight="174.0" prefWidth="231.0">
+      <Button layoutX="720.0" layoutY="68.0" mnemonicParsing="false" onAction="#pause" text="Wstrzymaj" />
+      <VBox fx:id="allStatistics" layoutX="720.0" layoutY="345.0" prefHeight="174.0" prefWidth="231.0">
          <children>
             <HBox prefHeight="11.0" prefWidth="100.0">
                <children>
@@ -63,7 +53,7 @@
             <Label text="Label" />
          </children>
       </VBox>
-      <VBox layoutX="455.0" layoutY="69.0" prefHeight="115.0" prefWidth="231.0">
+      <VBox fx:id="animalStatistics" layoutX="720.0" layoutY="123.0" prefHeight="115.0" prefWidth="231.0">
          <children>
             <HBox prefHeight="11.0" prefWidth="100.0">
                <children>
@@ -109,8 +99,8 @@
             </HBox>
          </children>
       </VBox>
-      <Button layoutX="535.0" layoutY="14.0" mnemonicParsing="false" text="Przerwij" />
-      <Button layoutX="455.0" layoutY="198.0" mnemonicParsing="false" text="Zacznij śledzić" />
-      <Button layoutX="454.0" layoutY="231.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="162.0" text="Najpopularniejszy genotyp" />
+      <Button layoutX="800.0" layoutY="68.0" mnemonicParsing="false" onAction="#stop" text="Przerwij" />
+      <Button layoutX="720.0" layoutY="252.0" mnemonicParsing="false" onAction="#startTracking" text="Zacznij śledzić" />
+      <Button layoutX="719.0" layoutY="285.0" mnemonicParsing="false" onAction="#mostPopular" prefHeight="25.0" prefWidth="162.0" text="Najpopularniejszy genotyp" />
    </children>
 </AnchorPane>
